team pic cutoff fix

--- a/static/assets/css/overwrite.css
+++ b/static/assets/css/overwrite.css
@@ -317,13 +317,8 @@ section .game:first-of-type{
 .teampic{
     float: right;
     max-width: 480px;
-    top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	-o-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
 }
 
 .cleardiv{
